# cpp-telemetry-fuser

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  TESTING_ANALYSIS.md  demo.sh
.github/workflows/: ci.yml
cmake/: FetchGTest.cmake  Warnings.cmake
docker/: Dockerfile
include/: config.h.in  http_server.hpp  metrics.hpp  service.hpp
screenshots/: 01-interactive-demo.txt  02-unit-tests.txt  04-docker-container.txt  README.md  SCREENSHOT_CHECKLIST.md  setup_screenshots.sh
src/: http_server.cpp  main.cpp  metrics.cpp  service.cpp
tests/: CMakeLists.txt  integration_tests.cpp  metrics_tests.cpp  service_tests.cpp
tools/loadgen/: plot_latency.py  run_hey.sh  run_wrk.sh
